--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Customer Service tool for generating consistent price offerings to client reques
     </head>
 
     <body class="container-fluid">
-        <div><h1>Customer Support Pricing Guidelines</h1></div>
+        <div><h1>Customer Support Pricing Guidelines Test</h1></div>
 
         <!--Input bar-->
         <div class="row filters">
