JSON array populates data table correctly

--- a/CS Pricing Guide/public_html/index.html
+++ b/CS Pricing Guide/public_html/index.html
@@ -16,7 +16,7 @@ Customer Service tool for generating consistent price offerings to client reques
         <div><h1>Customer Support Pricing Guidelines</h1></div>
 
         <!--Input bar-->
-        <div class="row jumbotron filters">
+        <div class="row jumbotron">
 
             <div class="col-xs-2">
                 <label>Country</label>
