Partially added fee calculations

--- a/CS Pricing Guide/public_html/index.html
+++ b/CS Pricing Guide/public_html/index.html
@@ -7,13 +7,13 @@ Customer Service tool for generating consistent price offerings to client reques
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
-        <title>CS Pricing Guide</title>
+        <title>CS Pricing Calculator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body class="container-fluid">
-        <div><h1>Customer Support Pricing Guidelines</h1></div>
+        <div><h1>Customer Support Pricing Calculator</h1></div>
 
         <!--Input bar-->
         <div class="row jumbotron">
@@ -58,7 +58,7 @@ Customer Service tool for generating consistent price offerings to client reques
         </div>
 
         <!--Data Table-->
-        <div id="data_table1" style="padding-top:20px">
+        <div id="data_table1" style="padding-top:100px">
             <table class="table table-striped table-hover" id="headline">
                 <caption>Headline Conditions</caption>
                 <thead>
