--- a/CS Pricing Guide/public_html/index.html
+++ b/CS Pricing Guide/public_html/index.html
@@ -17,7 +17,7 @@ Customer Service tool for generating consistent price offerings to client reques
 
         <!--Input bar-->
         <div class="row jumbotron">
-
+            <h2 class="display-3">Input</h2>
             <div class="col-xs-2">
                 <label>Country</label>
                 <select class="form-control" id="country_dropdown"></select>
@@ -33,7 +33,7 @@ Customer Service tool for generating consistent price offerings to client reques
 
             <div class="col-xs-2">
                 <label>Merchant TPV30 (€)</label>
-                <input type="number" class="form-control" placeholder="ex. 2000" id="tpv">
+                <input type="number" class="form-control" placeholder="ex. 3000" id="tpv">
             </div>
 
             <div class="col-xs-2">
@@ -55,10 +55,12 @@ Customer Service tool for generating consistent price offerings to client reques
                 <label>&nbsp;</label><br>
                 <button type="submit" class="btn btn-primary" id="pricing_button">Submit</button>
             </div>
+            <hr class="my-4">
+            <h2>Output</h2>
         </div>
 
         <!--Data Table-->
-        <div id="data_table1" style="padding-top:100px">
+        <div id="data_table1" style="padding-top:20px">
             <table class="table table-striped table-hover" id="headline">
                 <caption>Headline Conditions</caption>
                 <thead>
