--- a/CS Pricing Guide/public_html/index.html
+++ b/CS Pricing Guide/public_html/index.html
@@ -24,7 +24,7 @@ Customer Service tool for generating consistent price offerings to client reques
             </div>
 
             <div class="col-xs-2">
-                <label>Merchant Type</label>
+                <label>Merchant type</label>
                 <select class="form-control" id="merchant_type">
                     <option>New</option>
                     <option>Existing</option>
@@ -58,13 +58,28 @@ Customer Service tool for generating consistent price offerings to client reques
             </div>
 
             <hr class="my-4">
-            <div id="output">
-                <h2>Output</h2>
+            <h3>Output</h3>
+            <div class="panel panel-default">
+                <div class="panel-heading">Exclusive Merchant Conditions</div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Country</th>
+                            <th>Merchant Type</th>
+                            <th>Merchant TPV30 (€)</th>
+                            <th>Debit</th>
+                            <th>Credit</th>
+                            <th>Order quantity</th>
+                            <th>Device price</th>
+                        </tr>
+                    </thead>
+                    <tbody id="result"></tbody>
+                </table>
             </div>
         </div>
 
         <!--Data Table-->
-        <div id="data_table1" style="padding-top:20px">
+        <div id="data_table">
             <table class="table table-striped table-hover" id="headline">
                 <caption>Headline Conditions</caption>
                 <thead>
@@ -75,7 +90,7 @@ Customer Service tool for generating consistent price offerings to client reques
                         <th>Device Price</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="standard"></tbody>
             </table>
         </div>
 
