--- a/CS Pricing Guide/public_html/index.html
+++ b/CS Pricing Guide/public_html/index.html
@@ -24,7 +24,7 @@ Customer Service tool for generating consistent price offerings to client reques
             </div>
 
             <div class="col-xs-2">
-                <label>Merchant type</label>
+                <label>Merchant type TEST</label>
                 <select class="form-control" id="merchant_type">
                     <option>New</option>
                     <option>Existing</option>
